@@ -1,8 +1,17 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.32 2005/01/15 00:46:54 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.33 2005/01/15 01:33:38 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  14 Jan 2005; John Laliberte <allanonl@bu.edu>
+  Timezone.py - fixed bug where after selecting a timezone, it would jump
+  to the parent of the selection.
+  Networking.py - fixed bug where some fields would be available if device
+  was selected and was dhcp.  also integrated into backend ( one way only
+  so far, only will save, not load settings yet ).  Added error box to
+  ask the user if they want to replace settings or cancel if the device
+  is already listed.
   
   14 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added description to the top of NetworkMounts and changed the spacing
